--- a/Task0/task3/react-tutorial/src/Person/Person.css
+++ b/Task0/task3/react-tutorial/src/Person/Person.css
@@ -1,4 +1,4 @@
-.Person {
+/* .Person {
     width: 60%;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
@@ -7,3 +7,10 @@
     text-align: center;
     margin-bottom: 15px;
 }
+
+
+@media(min-width: 500px) {
+    .Person{
+        width: 450px;
+    }
+} */
